v.1.6.1 - Pending
	+ Bug: Fix python version check for Ubuntu Jaunty
	+ Bug: Traceback if track has multiple date tags

v1.6 - March 29, 2009
	+ Album browsing mode, additional details in library views
	+ Real-time searching of library (search as you type)
	+ Fullscreen album art mode (via right-click on artwork) (mips)
	+ Improve library searching across meta tags
	+ Sort library search results
	+ Show file path in tooltip for library search results
	+ Improved support for updating less than entire library
	+ Drag-and-drop to copy files from Sonata to a file manager (Kamil)
	+ Ability to show file paths in tag editing window
	+ Use plchanges for faster performance (e.g. add to playlist)
	+ Allow manually fetching remote art when using local art pref (Erik)
	+ Swap mousewheel behavior for progressbar
	+ Only minimize to trayicon on click if focused; raise if not focused
	+ Use new 'listplaylists' command for retrieving playlists
	+ Allow hiding the application's titlebar in preferences
	+ Better error trapping
	+ Make process name 'sonata' for linux (himdel)
	+ Look for <artist> - <title>.txt lyrics files by other clients
	+ Add Traditional Chinese translation (b4283)
	+ Add Japanese translation (Masato)
	+ Add Slovenian translation (Alan)
	+ Code modernisation, modularisation, overall cleanup, documentation
	+ A prototype of a plug-in system
	+ Unicode fixes
	+ Some helpful error messages if startup fails
	+ Useless code removed, various code cleanups and refactorings (Stephen)
	+ Bug: Bad profiles prevent Sonata from starting
	+ Bug: Error for CLI arguments when Sonata can't connect to MPD (Juan)
	+ Bug: Files may not update in interface after tag editing
	+ Bug: Traceback with Turkish locale
	+ Bug: Lyrics don't work with python-zsi 2.0 on Ubuntu
	+ Bug: Bell sound when going to parent folder using backspace

v1.5.3 - September 13, 2008
	+ Quick link to edit lyrics through LyricWiki
	+ Unicode lyrics and better searching with LyricWiki (orivej)